# CDC

./: .gitignore  CMakeLists.txt  README.md
docs/: 06-introduction.tex  10-analysis.tex  20-design.tex  30-engineering.tex  90-conclusion.tex  91-references.tex  92-attachments.tex  bmstu-gost-7-32-p51-title-page.sty  note.tex
docs/inc/img/: idef0-A0.drawio  idef0-A1-2.drawio
src/: ast.cpp  ast.hpp  bad_ast_visitor.cpp  bad_ast_visitor.hpp  bsq_lib.c  compiler.cpp  compiler.hpp  ir_generator.cpp  ir_generator.hpp  lexeme.cpp  lexeme.hpp  lexeme_reader.cpp  lexeme_reader.hpp  main.cpp  semantic_checker.cpp  semantic_checker.hpp  syntax_parser.cpp  syntax_parser.hpp
tests/: bubble.bas  test00.bas  test01.bas  test02.bas  test03.bas  test04.bas  test05.bas  test06.bas  test07.bas  test08.bas  test09.bas  test10.bas  test11.bas  test12.bas  test13.bas  test14.bas  test15.bas  test16.bas  test17.bas
